--- a/app/src/main/res/layout/activity_mad.xml
+++ b/app/src/main/res/layout/activity_mad.xml
@@ -4,15 +4,15 @@
     android:id="@+id/activity_mad"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.soldiersoul.wutu.military.MadActivity">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/military_ad_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="军事宣传"/>
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp" />
 
 </RelativeLayout>
