--- a/app/src/main/res/layout/activity_mcity.xml
+++ b/app/src/main/res/layout/activity_mcity.xml
@@ -4,15 +4,21 @@
     android:id="@+id/activity_mcity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.soldiersoul.wutu.military.McityActivity">
 
-    <TextView
+    <cn.ittiger.indexlist.IndexStickyView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/indexStickyView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="城市详情"/>
+        android:layout_height="match_parent"
+        app:sideBarBackgroundColor="@android:color/transparent"
+        app:sideBarFocusBackgroundColor="@color/colorPrimary"
+        app:sideBarFocusTextColor="@android:color/white"
+        app:sideBarTextColor="#8a8a8a"
+        app:sideBarTextSize="14sp"
+        app:sideBarTextSpace="4dp"
+        app:sideBarWidth="24dp">
+
+    </cn.ittiger.indexlist.IndexStickyView>
 
 </RelativeLayout>
