--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="colorTranslate">#00000000</color>
     <color name="colorBlack">#000000</color>
 
+    <color name="divider_color">#c9c9c9</color>
+
 </resources>
