--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
 
     <dimen name="pager_margin">-30dp</dimen>
 
+    <dimen name="global_divider_size">1px</dimen>
+    <dimen name="contact_item_left_margin">10dp</dimen>
+    <dimen name="contact_item_right_margin">24dp</dimen>
+
 </resources>
