--- a/app/src/main/res/layout/fragment_society_photo.xml
+++ b/app/src/main/res/layout/fragment_society_photo.xml
@@ -1,13 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.soldiersoul.wutu.society.SocietyPhotoFragment">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.soldiersoul.wutu.society.SocietyPhotoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:focusable="true"
+        android:id="@+id/rvSocietyPhoto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusableInTouchMode="true"/>
 
-</FrameLayout>
+</RelativeLayout>
