--- a/app/src/main/res/layout/activity_show_weapon.xml
+++ b/app/src/main/res/layout/activity_show_weapon.xml
@@ -11,4 +11,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.soldiersoul.wutu.weapon.ShowWeaponActivity">
 
+    <com.soldiersoul.wutu.weapon.openGL.GLView
+        android:id="@+id/glView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
