--- a/app/src/main/res/layout/fragment_weapon.xml
+++ b/app/src/main/res/layout/fragment_weapon.xml
@@ -3,8 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.soldiersoul.wutu.weapon.WeaponFragment">
+    
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:title="武器模型"
+        app:titleTextColor="@color/colorWhite"
+        android:background="@color/colorPrimary">
+
+    </android.support.v7.widget.Toolbar>
 
     <ImageView
         android:id="@+id/ivPistol"
