--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -2,11 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
-    <ImageView
-        android:id="@+id/item_image"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:scaleType="centerCrop"
-        android:layout_height="200dp" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:src="@mipmap/ic_launcher"
+            android:id="@+id/ivNewsPic"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginRight="10dp"/>
+
+        <TextView
+            android:id="@+id/tvNewsTitle"
+            android:text="新闻标题"
+            style="@style/Base.TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:layout_alignTop="@id/ivNewsPic"
+            android:layout_toRightOf="@id/ivNewsPic"/>
+
+        <TextView
+            android:text="内容----------------------------------------------------------------------------------------------------------------"
+            android:id="@+id/tvNewsContent"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/tvNewsTitle"
+            android:layout_toRightOf="@id/ivNewsPic"/>
+        <TextView
+            android:id="@+id/tvNewsTime"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_below="@id/tvNewsContent"
+            android:text="2017.2.27"
+            android:gravity="end"
+            android:paddingRight="30dp"/>
+
+    </RelativeLayout>
 </LinearLayout>
