--- a/app/src/main/res/layout/mutil_item.xml
+++ b/app/src/main/res/layout/mutil_item.xml
@@ -4,19 +4,50 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/item_image_1"
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/mad_card"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginRight="2dp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp"
+        app:contentPadding="15dp">
 
-    <ImageView
-        android:id="@+id/item_image_2"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginLeft="2dp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:src="@mipmap/ic_launcher"
+                android:id="@+id/ivMadpic"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"/>
+
+            <TextView
+                android:id="@+id/tvMadTitle"
+                android:text="标题"
+                style="@style/Base.TextAppearance.AppCompat.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/ivMadpic"
+                android:layout_toRightOf="@id/ivMadpic"/>
+
+            <TextView
+                android:text="内容-------------------------"
+                android:id="@+id/tvMadContent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/ivMadpic"
+                android:layout_toRightOf="@id/ivMadpic"/>
+
+        </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
 </LinearLayout>
