--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -1,70 +1,13 @@
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.soldiersoul.wutu.more.MeFragment">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context="com.soldiersoul.wutu.more.MeFragment">
 
-    <android.support.design.widget.AppBarLayout
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="match_parent"
+        android:text="我的界面"/>
 
-        <!--<android.support.design.widget.CollapsingToolbarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:padding="8dp"-->
-        <!--app:collapsedTitleGravity="center"-->
-        <!--app:contentScrim="@color/colorPrimary"-->
-        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_collapseMode="pin">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/ivUserAvatar"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:src="@mipmap/ic_launcher"
-                app:civ_border_color="@color/colorWhite"
-                app:civ_border_width="2dp"
-                app:layout_behavior="com.soldiersoul.wutu.more.AvatarBehavior"/>
-
-            <TextView
-                android:id="@+id/tvUserName"
-                style="@style/Base.TextAppearance.AppCompat.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/ivUserAvatar"
-                android:layout_alignTop="@id/ivUserAvatar"
-                android:layout_marginLeft="16dp"
-                android:layout_toRightOf="@id/ivUserAvatar"
-                android:gravity="center"
-                android:text="魂锁典狱长冯老师"
-                android:textColor="@color/colorWhite"/>
-
-        </RelativeLayout>
-
-        <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbarMe"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:background="@color/colorPrimary"-->
-        <!--app:layout_collapseMode="pin"-->
-        <!--app:title="我的"/>-->
-        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="1000dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-    </android.support.v4.widget.NestedScrollView>
-
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
