创建Bean，锁定二级界面为统一，修改部分界面显示

--- a/app/src/main/res/layout/activity_city_content.xml
+++ b/app/src/main/res/layout/activity_city_content.xml
@@ -1,25 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_city_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_margin="5dp"
     android:orientation="vertical"
     tools:context="com.soldiersoul.wutu.military.CityContentActivity">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/city_detail_img"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:background="@mipmap/ic_launcher"
         />
 
     <TextView
+        android:id="@+id/city_detail_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="省份征兵政策具体内容，待添加"/>
+        android:gravity="center"
+        style="@style/Base.TextAppearance.AppCompat.Title"
+        android:text="标题"/>
+
+    <TextView
+        android:id="@+id/city_detail_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="省份征兵政策具体内容，待添加--------------
+        --------------------------------------------
+        ---------------------------------------------------------
+        -----------------------------------------------
+        -------------------------------------------
+        ----------------------------------------
+        ------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        ------------------------------------------------------------------------------------------------------------------------------------
+        --------------------------------------------
+        ----------------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        ------------------------------------------------------------------------------------------------------------------------------------
+        --------------------------------------------
+        ----------------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        ------------------------------------------------------------------------------------------------------------------------------------
+        --------------------------------------------
+        ----------------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        ------------------------------------------------------------------------------------------------------------------------------------
+        --------------------------------------------
+        ----------------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        ------------------------------------------------------------------------------------------------------------------------------------
+        --------------------------------------------
+        ----------------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        ------------------------------------------------------------------------------------------------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        --------------------------------------------
+        -
+        -----------------------------------------
+        -----------------------------------------"/>
+    <TextView
+        android:id="@+id/city_detail_sourceandtime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:text="新闻来源：发布时间"/>
 
 </LinearLayout>
+
+
+</ScrollView>
