--- a/app/src/main/res/layout/mutil_item.xml
+++ b/app/src/main/res/layout/mutil_item.xml
@@ -26,7 +26,7 @@
                 android:src="@mipmap/ic_launcher"
                 android:id="@+id/ivMadpic"
                 android:layout_width="80dp"
-                android:layout_height="50dp"
+                android:layout_height="100dp"
                 android:layout_marginRight="10dp"/>
 
             <TextView
@@ -39,12 +39,27 @@
                 android:layout_toRightOf="@id/ivMadpic"/>
 
             <TextView
-                android:text="内容-------------------------"
+                android:text="内容---------------------------------------------------
+                -------------------------------------------------------------------
+                ----------------------------------------------------------------------------------
+                -------------------------------"
                 android:id="@+id/tvMadContent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/ivMadpic"
+                android:textSize="16sp"
+                android:maxLines="4"
+                android:layout_below="@id/tvMadTitle"
                 android:layout_toRightOf="@id/ivMadpic"/>
+            <TextView
+                android:id="@+id/tvMadTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:layout_below="@id/tvMadContent"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:text="2017.2.28"/>
 
         </RelativeLayout>
 
