--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -1,30 +1,23 @@
-<android.support.design.widget.CoordinatorLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.soldiersoul.wutu.more.MeFragment">
+    android:layout_height="wrap_content">
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.soldiersoul.wutu.more.MeFragment">
 
-        <!--<android.support.design.widget.CollapsingToolbarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:padding="8dp"-->
-        <!--app:collapsedTitleGravity="center"-->
-        <!--app:contentScrim="@color/colorPrimary"-->
-        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
-
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_collapseMode="pin">
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivUserAvatar"
@@ -32,39 +25,82 @@
                 android:layout_height="96dp"
                 android:src="@mipmap/ic_launcher"
                 app:civ_border_color="@color/colorWhite"
-                app:civ_border_width="2dp"
-                app:layout_behavior="com.soldiersoul.wutu.more.AvatarBehavior"/>
+                app:civ_border_width="1dp"/>
 
             <TextView
                 android:id="@+id/tvUserName"
                 style="@style/Base.TextAppearance.AppCompat.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/ivUserAvatar"
-                android:layout_alignTop="@id/ivUserAvatar"
-                android:layout_marginLeft="16dp"
-                android:layout_toRightOf="@id/ivUserAvatar"
+                android:layout_margin="10dp"
                 android:gravity="center"
                 android:text="魂锁典狱长冯老师"
                 android:textColor="@color/colorWhite"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
-        <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbarMe"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:background="@color/colorPrimary"-->
-        <!--app:layout_collapseMode="pin"-->
-        <!--app:title="我的"/>-->
-        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
-    </android.support.design.widget.AppBarLayout>
+        <com.soldiersoul.wutu.views.SimpleMenuItem
+            android:id="@+id/itemPhone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            app:imgSrc="@drawable/ic_phone"
+            app:itemText="绑定手机"/>
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="1000dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <com.soldiersoul.wutu.views.SimpleMenuItem
+            android:id="@+id/itemSchool"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            app:imgSrc="@drawable/ic_school"
+            app:itemText="学校"/>
 
-    </android.support.v4.widget.NestedScrollView>
+        <com.soldiersoul.wutu.views.SimpleMenuItem
+            android:id="@+id/itemCollection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:layout_marginTop="20dp"
+            app:imgSrc="@drawable/ic_collect"
+            app:itemText="我的收藏"/>
 
-</android.support.design.widget.CoordinatorLayout>
+        <com.soldiersoul.wutu.views.SimpleMenuItem
+            android:id="@+id/itemChangeSkin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            app:imgSrc="@drawable/ic_change_skin"
+            app:itemText="更换主题"/>
+
+        <com.soldiersoul.wutu.views.SimpleMenuItem
+            android:id="@+id/itemUpdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:layout_marginTop="20dp"
+            app:imgSrc="@drawable/ic_update"
+            app:itemText="检查更新"/>
+
+        <com.soldiersoul.wutu.views.SimpleMenuItem
+            android:id="@+id/itemAbout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            app:imgSrc="@drawable/ic_about"
+            app:itemText="关于"/>
+
+
+
+        <Button
+            android:id="@+id/btnQuitLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="40dp"
+            android:background="@color/colorRed"
+            android:text="退出登录"
+            android:textColor="@color/colorWhite"/>
+
+    </LinearLayout>
+</ScrollView>
